@@ -25,14 +25,21 @@ $_lang['articles.article'] = 'Article';
 $_lang['articles.article_alias'] = 'Alias (Permalink)';
 $_lang['articles.article_content'] = 'Content';
 $_lang['articles.article_create'] = 'Create New Article';
+$_lang['articles.article_delete_multiple'] = 'Delete Multiple Articles';
+$_lang['articles.article_delete_multiple_confirm'] = 'Are you sure you want to delete the selected Articles?';
 $_lang['articles.article_edit'] = 'Edit Article';
 $_lang['articles.article_options'] = 'Article Options';
 $_lang['articles.article_publish'] = 'Publish';
+$_lang['articles.article_selected_delete'] = 'Delete Selected';
+$_lang['articles.article_selected_undelete'] = 'Undelete Selected';
+$_lang['articles.article_selected_publish'] = 'Publish Selected';
+$_lang['articles.article_selected_unpublish'] = 'Unpublish Selected';
 $_lang['articles.article_summary'] = 'Summary';
 $_lang['articles.article_tags'] = 'Tags';
 $_lang['articles.article_title'] = 'Article Title';
 $_lang['articles.article_unpublish'] = 'Unpublish';
 $_lang['articles.articles'] = 'Articles';
+$_lang['articles.articles_err_ns_multiple'] = 'Please select at least one Article.';
 $_lang['articles.articles_manage'] = 'Manage Articles';
 $_lang['articles.articles_none'] = 'No articles yet!';
 $_lang['articles.articles_search'] = 'Search Articles...';
