@@ -1,0 +1,47 @@
+<?php
+/**
+ * Articles
+ *
+ * Copyright 2011-12 by Shaun McCormick <shaun+articles@modx.com>
+ *
+ * Articles is free software; you can redistribute it and/or modify it under the
+ * terms of the GNU General Public License as published by the Free Software
+ * Foundation; either version 2 of the License, or (at your option) any later
+ * version.
+ *
+ * Articles is distributed in the hope that it will be useful, but WITHOUT ANY
+ * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
+ * A PARTICULAR PURPOSE. See the GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License along with
+ * Articles; if not, write to the Free Software Foundation, Inc., 59 Temple
+ * Place, Suite 330, Boston, MA 02111-1307 USA
+ *
+ * @package articles
+ */
+/**
+ * @package articles
+ * @subpackage processors
+ */
+class ArticleDeleteMultipleProcessor extends modObjectProcessor {
+    public $classKey = 'Article';
+    public $objectType = 'article';
+    public $languageTopics = array('resource','articles:default');
+
+    public function process() {
+        $ids = $this->getProperty('ids',null);
+        if (empty($ids)) {
+            return $this->failure($this->modx->lexicon('articles.articles_err_ns_multiple'));
+        }
+        $ids = is_array($ids) ? $ids : explode(',',$ids);
+
+        foreach ($ids as $id) {
+            if (empty($id)) continue;
+            $this->modx->runProcessor('resource/delete',array(
+                'id' => $id,
+            ));
+        }
+        return $this->success();
+    }
+}
+return 'ArticleDeleteMultipleProcessor';
